# python-project-workflow-skill

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SHIPPING.md  VERSIONS.md  plan.md  todos.md  vision.md
evals/: evals.json  mature-repo-dogfood-ai-project-governance-2026-06-04.md  phase2-qualitative-review-2026-06-04.md  transcript-benchmark-expanded-9-2026-06-04.md  transcript-benchmark-iteration-1-2026-06-04.md  trigger-description-evals.json  trigger-description-optimization-2026-06-05.md
evals/fixtures/existing-buggy/: bad_code.py  pyproject.toml  some_module.py
evals/fixtures/existing-buggy/tests/: test_bad_code.py
evals/fixtures/existing-preserve/: README.md  pyproject.toml
evals/fixtures/existing-preserve/samplepkg/: core.py
evals/fixtures/existing-preserve/tests/: test_core.py
references/: README.md  core-footguns.md  drift-classes.md  lint-format-typing-testing.md  mature-repo-preservation.md  pyproject-template.md  research-evidence.md  safe-editing.md
research/: README.md  cross-ecosystem-agent-instructions.md  cross-ecosystem-skill-strategy.md  hermes-skill-patterns.md  python-gitignore-templates.md  requirements-txt-role.md  tooling-version-snapshot-2026-06-04.md
scripts/: check-readme-tree.py  check-version-consistency.py  payload-manifest.json  run_benchmark.py  run_phase2_checks.py  sync-payload.sh  test-sync-payload.py  test-validate-ci.py  validate-ci.py  validate.py  verify-urls.py
skill/: SKILL.md
tests/: test_run_benchmark.py  (+1 more)
(+22 files in other folders)
