[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "existing-buggy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
