[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "existing-preserve"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["samplepkg"]
